tugas2 (setengah)